changed position absolute to position fixed on mobilUl-container to hopfully solve side scrolling on mobile view

--- a/styles/_media.scss
+++ b/styles/_media.scss
@@ -130,7 +130,8 @@
     }
 
     .mobilUl-container {
-      position: absolute;
+      position: fixed;
+      z-index: 2;
       top: 15vh;
       left: 200%;
       text-align: center;
